[fix] dropdown z-index to prevent from sinking dropdown under buttons on plan schedule view

--- a/app/assets/stylesheets/ss/_pc_mb.scss
+++ b/app/assets/stylesheets/ss/_pc_mb.scss
@@ -1241,6 +1241,8 @@ table.pulldown-index {
   width: 70%;
   margin-top: 3px;
   border: 1px solid #bbb;
+  font-weight: normal;
+  z-index: 10;
   @include box-shadow(0 1px 10px #bbb);
 }
 .ads-total table.index {
